--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,11 @@ body {
   font-style: normal;
   background-color: #e5e5e5;
 }
+main {
+  width: 1170px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
 
 .link {
   text-decoration: none;
@@ -22,6 +27,7 @@ body {
 }
 
 /**header css**/
+
 .logo {
   font-family: Raleway, sans-serif;
   font-weight: 700;
@@ -66,6 +72,7 @@ body {
   text-align: center;
   text-transform: uppercase;
   color: var(--light-text-color);
+  margin-bottom: 30px;
 }
 .hero-button {
   font-family: Roboto, sans-serif;
@@ -79,6 +86,10 @@ body {
   color: var(--light-text-color);
   background-color: var(--second-color);
   cursor: pointer;
+  border-radius: 4px;
+  padding: 10px 32px;
+  display: inline-block;
+  min-width: 200px;
 }
 
 .about-us {
@@ -94,7 +105,6 @@ body {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
-
   color: var(--main-text-color);
 }
 .caption {
