--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@ ul {
   list-style: none;
 }
 /**Общий контейнер для элементов макета**/
-.conteiner {
+.container {
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
@@ -60,6 +60,7 @@ ul {
   display: flex;
   align-items: center;
 }
+
 .heading {
   display: flex;
 }
@@ -76,7 +77,6 @@ ul {
   padding-top: 24px;
   padding-bottom: 24px;
   margin-right: 93px;
-  margin-left: 25px;
 }
 .half-logo {
   color: var(--second-color);
@@ -129,8 +129,6 @@ ul {
   flex-grow: 1;
   text-align: center;
   padding-top: 200px;
-  padding-right: 252px;
-  padding-left: 252px;
 }
 .hero-text {
   font-weight: 900;
@@ -162,6 +160,7 @@ ul {
 .about-section {
   padding-top: 94px;
   padding-bottom: 94px;
+  padding-left: 115px;
   display: flex;
 }
 .about {
@@ -189,7 +188,10 @@ ul {
 .about-topic:not(:last-child) {
   margin-right: 30px;
 }
-
+/***********************Чем мы занимаемся**************************************/
+.our-work {
+  padding-bottom: 188px;
+}
 .caption {
   font-weight: 700;
   font-size: 36px;
@@ -197,17 +199,13 @@ ul {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--header-text-color);
-
-  margin-bottom: 50px;
-}
-.action-jpeg {
-  margin-bottom: 94px;
+  padding-bottom: 50px;
 }
 
 .action-jpeg:not(:last-child) {
   margin-right: 30px;
 }
-
+/****************Наша команда*****************/
 .team {
   font-weight: 500;
   font-size: 16px;
@@ -229,7 +227,7 @@ ul {
   margin-right: 30px;
 }
 .team-introduction {
-  margin-bottom: 94px;
+  padding-bottom: 94px;
 }
 
 /***footer css**/
@@ -279,13 +277,17 @@ footer {
   height: 1px;
   margin: -1px;
 }
-
-.projects {
-  margin-right: 30px;
-  margin-bottom: 30px;
+.port {
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
+.projects {
+  flex-basis: calc(100% / 3-30px);
+  margin-left: 30px;
+}
+
 .projects:nth-child(3n) {
-  margin-right: 0;
+  margin-right: -30px;
 }
 
 .portfolio-button {
@@ -303,7 +305,7 @@ footer {
 }
 .filter-button {
   justify-content: center;
-  margin-bottom: 34px;
+  padding-bottom: 34px;
 }
 .filter-button li:not(:last-child) {
   margin-right: 8px;
