--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ html {
 body {
   font-family: Roboto, sans-serif;
   font-style: normal;
-  background-color: #e5e5e5;
+  /*background-color: #e5e5e5;*/
 }
 
 /**Небольшой RESET после нормализации*/
@@ -129,7 +129,7 @@ ul {
   flex-grow: 1;
   text-align: center;
   padding-top: 200px;
-  padding-bottom: 280px;
+  padding-bottom: 200px;
 }
 .hero-text {
   font-weight: 900;
@@ -259,10 +259,10 @@ footer {
   color: var(--light-text-color);
 }
 .footer-post-and-phone:not(:last-child) {
-  padding-bottom: 9px;
+  margin-bottom: 9px;
 }
 .footer-adress {
-  padding-bottom: 9px;
+  margin-bottom: 9px;
 }
 .footer-post-and-phone .link {
   font-style: normal;
@@ -272,7 +272,7 @@ footer {
   color: rgba(255, 255, 255, 0.6);
 }
 .address-ccs {
-  padding-top: 20px;
+  margin-top: 20px;
 }
 
 .footer-adress .link {
@@ -332,7 +332,7 @@ footer {
 }
 .filter-button {
   justify-content: center;
-  padding-bottom: 34px;
+  margin-bottom: 50px;
 }
 .filter-button li:not(:last-child) {
   margin-right: 8px;
